<resources>
    <string name="app_name">FilmsAppRetrofitetc</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">My films</string>
    <string name="films">FILMS</string>
    <string name="title">TITLE</string>
    <string name="director">Director</string>
    <string name="release_date">Release date</string>
    <string name="rt_score">Rt score</string>
    <string name="running_time">Running time</string>
    <string name="add_to_library">Add to library</string>
    <string name="image_to_add_to_libraries">Image to add to libraries</string>
    <string name="poster_of_the_film">Poster of the film</string>
    <string name="something_went_wrong">Something went wrong </string>
    <string name="please_check_internet_connection">Please check internet connection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="original_title">Original title</string>
    <string name="original_title_romanised">Original title romanised</string>
    <string name="description">Description</string>
    <string name="producer">Producer</string>
    <string name="director_">Director: </string>
    <string name="release_date_">Release date: </string>
    <string name="running_time_">Running time: </string>
    <string name="rt_score_">Rt score: </string>
    <string name="producer_">Producer: </string>
    <string name="original_title_roman">Original title romanised: </string>
    <string name="original_title_">Original title: </string>
    <string name="description_">Description: </string>
    <string name="more_about_film">More about film</string>
    <string name="locations">Locations</string>
    <string name="people">People</string>
    <string name="species">Species</string>
    <string name="classification">Classification</string>
    <string name="name">Name</string>
    <string name="eye_colors">Eye colors</string>
    <string name="hair_colors">Hair colors</string>
    <string name="saved_films">Saved films</string>
    <string name="scan_qr_code_n_to_see_more_about_this_film">Scan QR-code to see more about this film</string>
    <string name="cancel">Cancel</string>
    <string name="scan_film">Scan film</string>
    <string name="add">Add</string>
    <string name="get_qr_code">Get QR-code</string>

</resources>