<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgr_for_items"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.DetailsFilmsFragment">


    <TextView
        android:id="@+id/title_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/director_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/director"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/producer_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/producer"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/release_date_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_date"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:layout_marginStart="15dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/running_time_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/running_time"
        android:textColor="@color/black"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/rt_score_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rt_score"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:layout_marginStart="15dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/original_title_details"
        android:layout_width="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_height="wrap_content"
        android:text="@string/original_title"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/original_title_romanised_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/original_title_romanised"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/more_about_film_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/more_about_film"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/description_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/backgr_buttons"
            android:padding="7dp"
            android:text="@string/species"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_people"
            android:layout_width="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:background="@drawable/backgr_buttons"
            android:padding="7dp"
            android:text="@string/people"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/backgr_buttons"
            android:padding="7dp"
            android:text="@string/locations"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>
</LinearLayout>