<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/backgr_for_items"
        android:padding="5dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/image_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/poster_of_the_film"
            android:scaleType="centerInside" />

        <ImageView
            android:id="@+id/image_get_qr_code"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_above="@id/title_home"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:paddingBottom="15dp"
            android:src="@drawable/icons850" />

        <TextView
            android:id="@+id/text_to_image_qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/image_get_qr_code"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:text="@string/get_qr_code"
            android:textSize="11sp" />

        <ImageView
            android:id="@+id/image_add_home"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_above="@id/release_date_home"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/image_to_add_to_libraries"
            android:paddingBottom="10dp"
            android:src="@drawable/ic_round_bookmark_add_24" />

        <TextView
            android:id="@+id/text_to_image_add_or_added"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/image_add_home"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:text="@string/add_to_library"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/title_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/director_home"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/director_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/rt_score_home"
            android:text="@string/director"
            android:layout_marginTop="7dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/release_date_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/running_time_home"
            android:text="@string/release_date"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/running_time_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/running_time"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/rt_score_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/release_date_home"
            android:text="@string/rt_score"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RelativeLayout>
</LinearLayout>