<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:padding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/backgr_for_items"
        android:padding="5dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/image_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/poster_of_the_film"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/title_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/director_home"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/director_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/rt_score_home"
            android:text="@string/director"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/release_date_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/running_time_home"
            android:text="@string/release_date"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/running_time_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/running_time"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/rt_score_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/release_date_home"
            android:text="@string/rt_score"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>