<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backgr_for_items"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/name_species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/classification_species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/classification"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/eye_colors_species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/eye_colors"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/hair_colors_species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/hair_colors"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>